force-app/main/default/objects/AO_Form_Element__c.object
<CustomObject>
    <fields>
        <fullName>AO_Type__c</fullName>
        <description>Data = Input or Output
        Section = Has Child Clements
        Spacer = Blank Element</description>
        <inlineHelpText>Data = Input or Output
Section = Has Child Clements
Spacer = Blank Element</inlineHelpText>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Data</fullName>
                    <default>true</default>
                    <label>Data</label>
                </value>
                <value>
                    <fullName>Section</fullName>
                </value>
                <value>
                    <fullName>Spacer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Admin_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field will be hidden on the form but create a placeholder answer in the response</description>
        <inlineHelpText>Field will be hidden on the form but create a placeholder answer in the response</inlineHelpText>
        <label>Admin Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Element_Column_Width__c</fullName>
        <description>Width of Column for the questions on Form</description>
        <label>Element Column Width</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Element_Definition__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Question Library lookup to select question</description>
        <label>Element Definition</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AO_Question_Library__c.AO_Inactive__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>AO_Question_Library__c</referenceTo>
        <relationshipLabel>Form Elements</relationshipLabel>
        <relationshipName>Questions_Library</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Element_Sequence__c</fullName>
        <description>Sequence in which Question appears on Form</description>
        <label>Element Sequence</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Form__c</fullName>
        <description>Lookup on Form</description>
        <label>Form</label>
        <referenceTo>AO_Form__c</referenceTo>
        <relationshipName>Form_Elements</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Is_Section__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked in case the element type is Section</description>
        <label>Is Section</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Label__c</fullName>
        <description>(Optional) Overrides any label set by the Element Definition</description>
        <inlineHelpText>(Optional) Overrides any label set by the Element Definition</inlineHelpText>
        <label>Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Element_Name__c</fullName>
        <description>Contains the name of the parent Element.</description>
        <formula>Parent_Element__r.Name</formula>
        <label>Parent Element Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Element__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Populate if Question is part of any section</description>
        <label>Parent Element</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AO_Form_Element__c.Form__c</field>
                <operation>equals</operation>
                <valueField>$Source.Form__c</valueField>
            </filterItems>
            <filterItems>
                <field>AO_Form_Element__c.AO_Type__c</field>
                <operation>equals</operation>
                <value>Section</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>AO_Form_Element__c</referenceTo>
        <relationshipLabel>Child Elements</relationshipLabel>
        <relationshipName>Child_Elements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Read_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked in case a question is Read Only on Form</description>
        <label>Read Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked in case a Question is required in Form</description>
        <label>Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Section_Columns__c</fullName>
        <description>Represents count of columns in Section</description>
        <label>Section Columns</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Visibility_Rule_Form_Element__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Dependent Form Elements</description>
        <label>Visibility Rule Form Element</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AO_Form_Element__c.Form__c</field>
                <operation>equals</operation>
                <valueField>$Source.Form__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>AO_Form_Element__c</referenceTo>
        <relationshipLabel>Dependent Form Elements</relationshipLabel>
        <relationshipName>Dependent_Form_Elements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Visibility_Rule_Operator__c</fullName>
        <description>Operator for comparison of condition in element</description>
        <label>Visibility Rule Operator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>==</fullName>
                    <label>== (Equal)</label>
                </value>
                <value>
                    <fullName>!=</fullName>
                    <label>!= (Not Equal)</label>
                </value>
                <value>
                    <fullName>&lt;</fullName>
                    <label>&lt; (Less Than)</label>
                </value>
                <value>
                    <fullName>&gt;</fullName>
                    <label>&gt; (Greater Than)</label>
                </value>
                <value>
                    <fullName>&lt;=</fullName>
                    <label>&lt;= (Less Than or Equal)</label>
                </value>
                <value>
                    <fullName>&gt;=</fullName>
                    <label>&gt;= (Greater Than or Equal)</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Visibility_Rule_Value__c</fullName>
        <description>Value to compare against Form Element</description>
        <label>Visibility Rule Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>(AO) Form Element</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Form Element Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Form Elements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>